<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bb"
    tools:context=".RecuperarActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="Tela de Recuperacao" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="371dp"
        android:layout_height="36dp"
        android:layout_marginTop="20sp"
        android:textColorHint="@color/black"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:textColor="@color/black"
        android:layout_margin="20sp"
        android:hint="@string/nome_recup"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="371dp"
        android:layout_height="36dp"
        android:layout_marginTop="20sp"
        android:textColorHint="@color/black"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:textColor="@color/black"
        android:layout_margin="20sp"
        android:hint="@string/telefone_recup"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="371dp"
        android:layout_height="36dp"
        android:layout_marginTop="20sp"
        android:textColorHint="@color/black"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/token_recup"
        android:layout_margin="20sp"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/prosseguir_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="Prosseguir" />

</LinearLayout>